--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Министерство говноедов</title>
+	<title>Агентство говноедов</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 	<div class="wrapper">
 		<header>
-			<h1>Министерство говноедов Российсой Федерации</h1>
+			<h1>Агентство говноедов</h1>
 			<h2>Мы обосрем ваши байдарки и каноэ!</h2>
 		</header>
 		<nav>
@@ -26,8 +26,11 @@
 			</div>
 		</nav>
 		<section class="content">
-			<marquee class="content-marq"> ААААА КТО ПОДКИНУЛ НАМ ЛЯГУШЕК???? A? A? A? A? A? A? A? A? A? A? A? <marquee>
+			<marquee class="content-marq"> ААААА КТО ПОДКИНУЛ НАМ ЛЯГУШЕК???? A? A? A? A? A? A? A? A? A? A? A? </marquee>
 		</section>
+		<footer>
+			20!8 © Агентство говноедов. Все права <strike> защищены </strike> в жопе.
+		</footer>
 	</div>
 </body>
 </html>
