Add news section

--- a/index.html
+++ b/index.html
@@ -27,6 +27,41 @@
 		</nav>
 		<section class="content">
 			<marquee class="content-marq"> ААААА КТО ПОДКИНУЛ НАМ ЛЯГУШЕК???? A? A? A? A? A? A? A? A? A? A? A? </marquee>
+			<section class="news">
+				<section class="news-block">
+					<section class="news-block__name">
+						<h3>Нам подкинули лягушек</h3>
+					</section>
+					<section class="news-block__date">
+						<p>2018.6.23</p>
+					</section>
+					<section class="news-block__text">
+						<p>Кто это был??? а? а? а?</p>
+					</section>
+				</section>
+				<section class="news-block">
+					<section class="news-block__name">
+						<h3>Пополнение!!</h3>
+					</section>
+					<section class="news-block__date">
+						<p>2018.6.24</p>
+					</section>
+					<section class="news-block__text">
+						<p>Бочонок пивное пузо вступил в наши ряды!</p>
+					</section>
+				</section>
+				<section class="news-block">
+					<section class="news-block__name">
+						<h3>Мы обосрались!!</h3>
+					</section>
+					<section class="news-block__date">
+						<p>2018.6.25</p>
+					</section>
+					<section class="news-block__text">
+						<p>Опять обосрались в лодку!</p>
+					</section>
+				</section>
+			</section>
 		</section>
 		<footer>
 			20!8 © Агентство говноедов. Все права <strike> защищены </strike> в жопе.
