--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<p>2018.6.25</p>
 					</section>
 					<section class="news-block__text">
-						<p>Опять обосрались в лодку!</p>
+						<p>Опять обосрались в лодку! (((</p>
 					</section>
 				</section>
 			</section>
